# gplates-wasm

./: .gitignore  CHANGELOG  CMakeLists.txt  DEPS.Windows  README.md  gplates.pro  mainwindow.cpp  mainwindow.h
cmake/modules/: FindQwt.cmake  Install.cmake  TestPythonEmbedding.cmake
examples/: CMakeLists.txt  README.md  gdal.data  gdal.js  server.py
examples/benchmark/: benchmark-js.html  gplates-no-gui.data  gplates-no-gui.js
examples/earth-reconstruction/: reconstruction-d3.html
examples/emscripten_localfiles/: CMakeLists.txt  file4test.html  main.cpp
examples/gplates-wasm/: gplates.html
examples/inspect_geotiff/: worker.js
examples/inspect_vector/: README  index.html  index.js  worker.js
examples/qt_calendarwidget_gui/: calendarwidget.html  calendarwidget.js  object_script.calendarwidget.js
examples/qt_opengl_gui/: CMakeLists.txt  glwindow.h  hellogles3.html  hellogles3.js
examples/thumbnail/: index.html  index.js  worker.js
examples/thumbnail_map/: worker.js
examples/tile_tiff/: worker.js
examples/wasm-gplates-qt-demo/: index.html  web-app-demo.js
lib/: README.md
sample-data/shapefiles/: front_line_rotates_about_y.shp.gplates.xml
src/: CMakeLists.txt  CMakeLists.txt.autosave  ScribeExportGPlates.cc  ScribeExportGPlatesDemoNoGui.cc  ScribeExportGPlatesUnitTest.cc  ScribeExportPyGPlates.cc  gplates-no-gui.html  gplates_demo_no_gui_main.cc  gplates_main.cc  gplates_unit_test_main.cc  pygplates_pch.h  reconstructions.cc  reconstructions.h
src/api/: AbstractConsole.h  AbstractPythonRunner.h  CMakeLists.txt  ConsoleReader.cc  Python.cc  (+19 more)
(+2145 files in other folders)
